cmake_minimum_required(VERSION 3.5)
project(src)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    base/tl/algorithm.h
    base/tl/allocator.h
    base/tl/array.h
    base/tl/base.h
    base/tl/range.h
    base/tl/sorted_array.h
    base/tl/string.h
    base/tl/threading.h
    base/detect.h
    base/math.h
    base/system.c
    base/system.h
    base/vmath.h
    engine/client/backend_sdl.cpp
    engine/client/backend_sdl.h
    engine/client/client.cpp
    engine/client/client.h
    engine/client/friends.cpp
    engine/client/friends.h
    engine/client/graphics.cpp
    engine/client/graphics.h
    engine/client/graphics_threaded.cpp
    engine/client/graphics_threaded.h
    engine/client/input.cpp
    engine/client/input.h
    engine/client/keynames.h
    engine/client/serverbrowser.cpp
    engine/client/serverbrowser.h
    engine/client/sound.cpp
    engine/client/sound.h
    engine/client/text.cpp
    engine/external/pnglite/pnglite.c
    engine/external/pnglite/pnglite.h
    engine/external/wavpack/bits.c
    engine/external/wavpack/float.c
    engine/external/wavpack/metadata.c
    engine/external/wavpack/unpack.c
    engine/external/wavpack/wavpack.h
    engine/external/wavpack/words.c
    engine/external/wavpack/wputils.c
    engine/external/zlib/adler32.c
    engine/external/zlib/compress.c
    engine/external/zlib/crc32.c
    engine/external/zlib/crc32.h
    engine/external/zlib/deflate.c
    engine/external/zlib/deflate.h
    engine/external/zlib/infback.c
    engine/external/zlib/inffast.c
    engine/external/zlib/inffast.h
    engine/external/zlib/inffixed.h
    engine/external/zlib/inflate.c
    engine/external/zlib/inflate.h
    engine/external/zlib/inftrees.c
    engine/external/zlib/inftrees.h
    engine/external/zlib/trees.c
    engine/external/zlib/trees.h
    engine/external/zlib/uncompr.c
    engine/external/zlib/zconf.h
    engine/external/zlib/zlib.h
    engine/external/zlib/zutil.c
    engine/external/zlib/zutil.h
    engine/server/register.cpp
    engine/server/register.h
    engine/server/server.cpp
    engine/server/server.h
    engine/shared/compression.cpp
    engine/shared/compression.h
    engine/shared/config.cpp
    engine/shared/config.h
    engine/shared/config_variables.h
    engine/shared/console.cpp
    engine/shared/console.h
    engine/shared/datafile.cpp
    engine/shared/datafile.h
    engine/shared/demo.cpp
    engine/shared/demo.h
    engine/shared/econ.cpp
    engine/shared/econ.h
    engine/shared/engine.cpp
    engine/shared/filecollection.cpp
    engine/shared/filecollection.h
    engine/shared/huffman.cpp
    engine/shared/huffman.h
    engine/shared/jobs.cpp
    engine/shared/jobs.h
    engine/shared/kernel.cpp
    engine/shared/linereader.cpp
    engine/shared/linereader.h
    engine/shared/map.cpp
    engine/shared/mapchecker.cpp
    engine/shared/mapchecker.h
    engine/shared/masterserver.cpp
    engine/shared/memheap.cpp
    engine/shared/memheap.h
    engine/shared/message.h
    engine/shared/netban.cpp
    engine/shared/netban.h
    engine/shared/network.cpp
    engine/shared/network.h
    engine/shared/network_client.cpp
    engine/shared/network_conn.cpp
    engine/shared/network_console.cpp
    engine/shared/network_console_conn.cpp
    engine/shared/network_server.cpp
    engine/shared/packer.cpp
    engine/shared/packer.h
    engine/shared/protocol.h
    engine/shared/ringbuffer.cpp
    engine/shared/ringbuffer.h
    engine/shared/snapshot.cpp
    engine/shared/snapshot.h
    engine/shared/storage.cpp
    engine/client.h
    engine/config.h
    engine/console.h
    engine/demo.h
    engine/editor.h
    engine/engine.h
    engine/friends.h
    engine/graphics.h
    engine/input.h
    engine/kernel.h
    engine/keys.h
    engine/map.h
    engine/masterserver.h
    engine/message.h
    engine/server.h
    engine/serverbrowser.h
    engine/sound.h
    engine/storage.h
    engine/textrender.h
    game/client/components/binds.cpp
    game/client/components/binds.h
    game/client/components/broadcast.cpp
    game/client/components/broadcast.h
    game/client/components/camera.cpp
    game/client/components/camera.h
    game/client/components/chat.cpp
    game/client/components/chat.h
    game/client/components/console.cpp
    game/client/components/console.h
    game/client/components/controls.cpp
    game/client/components/controls.h
    game/client/components/countryflags.cpp
    game/client/components/countryflags.h
    game/client/components/damageind.cpp
    game/client/components/damageind.h
    game/client/components/debughud.cpp
    game/client/components/debughud.h
    game/client/components/effects.cpp
    game/client/components/effects.h
    game/client/components/emoticon.cpp
    game/client/components/emoticon.h
    game/client/components/flow.cpp
    game/client/components/flow.h
    game/client/components/hud.cpp
    game/client/components/hud.h
    game/client/components/items.cpp
    game/client/components/items.h
    game/client/components/killmessages.cpp
    game/client/components/killmessages.h
    game/client/components/mapimages.cpp
    game/client/components/mapimages.h
    game/client/components/maplayers.cpp
    game/client/components/maplayers.h
    game/client/components/menus.cpp
    game/client/components/menus.h
    game/client/components/menus_browser.cpp
    game/client/components/menus_demo.cpp
    game/client/components/menus_ingame.cpp
    game/client/components/menus_settings.cpp
    game/client/components/motd.cpp
    game/client/components/motd.h
    game/client/components/nameplates.cpp
    game/client/components/nameplates.h
    game/client/components/particles.cpp
    game/client/components/particles.h
    game/client/components/players.cpp
    game/client/components/players.h
    game/client/components/scoreboard.cpp
    game/client/components/scoreboard.h
    game/client/components/skins.cpp
    game/client/components/skins.h
    game/client/components/sounds.cpp
    game/client/components/sounds.h
    game/client/components/spectator.cpp
    game/client/components/spectator.h
    game/client/components/voting.cpp
    game/client/components/voting.h
    game/client/animstate.cpp
    game/client/animstate.h
    game/client/component.h
    game/client/gameclient.cpp
    game/client/gameclient.h
    game/client/lineinput.cpp
    game/client/lineinput.h
    game/client/render.cpp
    game/client/render.h
    game/client/render_map.cpp
    game/client/ui.cpp
    game/client/ui.h
    game/editor/auto_map.cpp
    game/editor/auto_map.h
    game/editor/editor.cpp
    game/editor/editor.h
    game/editor/io.cpp
    game/editor/layer_game.cpp
    game/editor/layer_quads.cpp
    game/editor/layer_tiles.cpp
    game/editor/popups.cpp
    game/generated/client_data.cpp
    game/generated/client_data.h
    game/generated/nethash.cpp
    game/generated/protocol.cpp
    game/generated/protocol.h
    game/generated/server_data.cpp
    game/generated/server_data.h
    game/server/entities/character.cpp
    game/server/entities/character.h
    game/server/entities/flag.cpp
    game/server/entities/flag.h
    game/server/entities/laser.cpp
    game/server/entities/laser.h
    game/server/entities/pickup.cpp
    game/server/entities/pickup.h
    game/server/entities/projectile.cpp
    game/server/entities/projectile.h
    game/server/gamemodes/ctf.cpp
    game/server/gamemodes/ctf.h
    game/server/gamemodes/dm.cpp
    game/server/gamemodes/dm.h
        game/server/gamemodes/god.cpp
        game/server/gamemodes/god.h
    game/server/gamemodes/tdm.cpp
    game/server/gamemodes/tdm.h
    game/server/entity.cpp
    game/server/entity.h
    game/server/eventhandler.cpp
    game/server/eventhandler.h
    game/server/gamecontext.cpp
    game/server/gamecontext.h
    game/server/gamecontroller.cpp
    game/server/gamecontroller.h
    game/server/gameworld.cpp
    game/server/gameworld.h
    game/server/player.cpp
    game/server/player.h
    game/collision.cpp
    game/collision.h
    game/gamecore.cpp
    game/gamecore.h
    game/layers.cpp
    game/layers.h
    game/localization.cpp
    game/localization.h
    game/mapitems.h
    game/tuning.h
    game/variables.h
    game/version.h
    game/voting.h
    mastersrv/mastersrv.cpp
    mastersrv/mastersrv.h
    osxlaunch/client.h
    tools/crapnet.cpp
    tools/dilate.cpp
    tools/fake_server.cpp
    tools/map_resave.cpp
    tools/map_version.cpp
    tools/packetgen.cpp
    tools/tileset_borderadd.cpp
    tools/tileset_borderfix.cpp
    tools/tileset_borderrem.cpp
    tools/tileset_borderset.cpp
    versionsrv/mapversions.h
    versionsrv/versionsrv.cpp
    versionsrv/versionsrv.h game/server/gamemodes/smod.cpp game/server/gamemodes/smod.h game/server/modloader/modLoader.cpp game/server/modloader/modLoader.h game/server/modloader/mod.cpp game/server/modloader/mod.h game/server/modloader/modEvents.h game/server/mods/testMod.cpp game/server/mods/testMod.h game/server/modloader/modLoaderGetter.h game/server/modloader/modLoaderGetter.cpp game/server/modloader/mod_actions.h game/server/entities/WeaponStat.h)

include_directories(.)

add_executable(src ${SOURCE_FILES})